# smart-shipping-bidi-III

./: .gitignore  GOOGLE_BILLING_DISCREPANCY_REPORT.md  MIGRATION_SUMMARY.md  README.md  TELNYX_PORTAL_SETUP.md  TELNYX_QUICKSTART.md  pyproject.toml
stress-test/: README.md  __init__.py  customer_agent.py  mediator_simulator.py  play_audio.ps1  pyproject.toml  run_stress_test.ps1  stress_test.py  telnyx_simulator.py  test_error.txt  test_output.txt
stress-test/log/audio/20260124_163430_301e8c5c/: turn01_agent_received.ulaw  turn01_customer_sent.ulaw  turn02_agent_received.ulaw  turn02_customer_sent.ulaw  turn03_agent_received.ulaw  turn03_customer_sent.ulaw  turn04_agent_received.ulaw  turn04_customer_sent.ulaw  turn05_agent_received.ulaw  turn05_customer_sent.ulaw  turn06_agent_received.ulaw  turn06_customer_sent.ulaw  turn07_agent_received.ulaw  turn08_agent_received.ulaw
stress-test/log/audio/20260125_172649_2edc5c8a/: turn01_agent_received.ulaw  turn01_customer_sent.ulaw  turn02_agent_received.ulaw  turn02_customer_sent.ulaw  turn03_agent_received.ulaw  turn03_customer_sent.ulaw  turn04_agent_received.ulaw  turn04_customer_sent.ulaw  turn05_agent_received.ulaw  turn05_customer_sent.ulaw  turn06_agent_received.ulaw  turn07_agent_received.ulaw
stress-test/log/audio/20260125_172649_8030872b/: turn02_agent_received.ulaw  turn02_customer_sent.ulaw  turn03_agent_received.ulaw  turn03_customer_sent.ulaw  turn04_agent_received.ulaw  turn04_customer_sent.ulaw  turn05_agent_received.ulaw
stress-test/log/audio/20260125_172650_4d532e18/: turn01_agent_received.ulaw  turn02_agent_received.ulaw  turn02_customer_sent.ulaw  turn03_agent_received.ulaw  turn03_customer_sent.ulaw  turn04_agent_received.ulaw  turn04_customer_sent.ulaw  (+6 more)
(+34 files in other folders)
