[project]
name = "smart-shipping-bidi"
version = "0.1.0"
description = "SmartShip Voice Assistant with ADK Bidi-streaming"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Canada Post" }
]

dependencies = [
    "google-adk>=1.20.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
    # Telephony integration dependencies
    "telnyx>=2.0.0",              # Telnyx SDK for phone integration
    # Note: audioop is built-in for Python 3.10-3.12
    # For Python 3.13+, audioop-lts is required (see optional-dependencies below)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.shared-data]
"app/static" = "share/bidi-demo/static"
"app/.env" = "share/bidi-demo/.env.template"
